Starting FrontEnd Development (Model, Interface, Service and HttpExtensions)

--- a/CodingLanguages.Web/appsettings.json
+++ b/CodingLanguages.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "CodingLanguagesApi": "http://localhost:5000"
+  }
 }
