--- a/CodingLanguages.Web/Properties/launchSettings.json
+++ b/CodingLanguages.Web/Properties/launchSettings.json
@@ -8,11 +8,11 @@
     }
   },
   "profiles": {
-    "GeekShooping.Web": {
+    "CodingLanguages.Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5252",
+      "applicationUrl": "http://localhost:5100",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
